Bug 114921 -- passing dirty rectangle with paint message to windowless plugin, r=peterl, sr=attinasi